--- a/hello.html
+++ b/hello.html
@@ -6,6 +6,6 @@
     </head>
     <body>
         Hello, World!
-        <h1> Welcome to my Website </h1>
+        <h1 style "color: blue;"> Welcome to my Website </h1>
     </body>
 </html>
