--- a/hello.html
+++ b/hello.html
@@ -6,6 +6,6 @@
     </head>
     <body>
         Hello, World!
-        <h1 style "color: red;"> Welcome to my Website </h1>
+        <h1 style ="color: red;"> Welcome to my Website </h1>
     </body>
 </html>
